--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm navbar-dark">
+<nav class="navbar navbar-expand-sm">
   <div class="container-fluid">
     <button type="button"
             class="navbar-toggler"
@@ -16,13 +16,6 @@
             <a class="nav-link active" href="{{ "/" | relative_url }}">Home</a>
           {% else %}
             <a class="nav-link" href="{{ "/" | relative_url }}">Home</a>
-          {% endif %}
-        </li>
-        <li class="nav-item">
-          {% if page.url == "/features.html" %}
-            <a class="nav-link active" href="{{ "/features" | relative_url }}">Features</a>
-          {% else %}
-            <a class="nav-link" href="{{ "/features" | relative_url }}">Features</a>
           {% endif %}
         </li>
         <li class="nav-item">
