--- a/_includes/sign-up-form.html
+++ b/_includes/sign-up-form.html
@@ -36,7 +36,7 @@
 <div class="row mb-3">
   <div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 col-lg-6 offset-lg-3 d-flex justify-content-end">
     <button type="button"
-            class="btn btn-outline-light"
+            class="btn btn-primary"
             id="btn-submit">
       Sign up
     </button>
