--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <title>{{page.title}}</title>
+  {% if page.description %}
+  <meta name="description" content="{{page.description}}">
+  {% endif %}
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
